--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.4.1",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.17.9",
     "@types/react": "^18",
