--- a/biome.json
+++ b/biome.json
@@ -35,5 +35,12 @@
       "quoteStyle": "single",
       "attributePosition": "auto"
     }
+  },
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
   }
 }
